# neighborhoodwatch

./: .gitignore  Dockerfile  README.md  count_vectors.py  cuMLKNN.py  launcher.py  merge.py  nw_docker.md  parquet_to_ivec_fvec.py  pyproject.toml  read_with_duckdb.py  requirements.txt  sort_with_duckdb_streaming.py  split_with_duckdb.py  split_with_duckdb_streaming.py  validate_with_duckdb.py
bash/: install_bm_env.sh  install_env.sh
docker/: Dockerfile_bm
neighborhoodwatch/: colbert_knn.py  colbert_knn_early_flatten.py  cu_knn.py  cu_knn_ds.py  generate_dataset.py  hdf5_dupe_detector.py  merge.py  model_generator.py  neighborhoodwatch.py  nw_utils.py  parquet_to_format.py  parquet_to_ivec_fvec.py  read_with_duckdb.py  split_with_duckdb.py  split_with_duckdb_streaming.py
neighborhoodwatch/misc/: ifvec_reader.py
tests/: conftest.py  test_01_generate_dataset.py  test_02_cu_knn.py  test_03_merge.py  test_04_gen_ifvec_hdf5.py  test_04_parquet_to_format.py  test_cu_knn.py  test_generate_dataset.py  test_merge.py  test_parquet_to_ivec_fvec.py
