[tool.poetry]
name = "neighborhoodwatch"
version = "0.1.0"
description = ""
authors = ["phact <estevezsebastian@gmail.com>", "yabinmeng <yabinmeng@gmail.com"]
readme = "README.md"
packages = [{include = "neighborhoodwatch"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
rmm-cu12 = {url = "https://pypi.nvidia.com/rmm-cu12/rmm_cu12-23.8.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl#sha256=261f50c2eed271c75b74a8e4e23e700f1cd78d7d7a536843f93b74bcfe84ea7b"}
pylibraft-cu12 = {url = "https://pypi.nvidia.com/pylibraft-cu12/pylibraft_cu12-23.8.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl#sha256=09522a22c51069e7fa12e4bc924f0a8acde263a09e9d5608d04880f9c52a0f5d"}
ucx-py-cu12 = {url = "https://pypi.nvidia.com/ucx-py-cu12/ucx_py_cu12-0.33.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl#sha256=6029981f3b69c479546883485023bd1c7c0196b02826d4910f1a5cb092d24219"}
raft-dask-cu12 = {url = "https://pypi.nvidia.com/raft-dask-cu12/raft_dask_cu12-23.8.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl#sha256=b99d396c32da1afeb4f7f8bc2ebae8e7a177ca06931ac268afff02a2f5a2a373"}
cachetools = "5.3.1"
cupy-cuda12x = "12.2.0"
cython = "3.0.0"
datasets = "^2.14.5"
duckdb = "0.8.1"
fastrlock = "0.8.1"
install = "1.3.5"
jinja2 = "3.1.2"
markupsafe = "2.1.3"
nvidia-ml-py3 = "7.352.0"
nvtx = "0.2.6"
pyarrow = "11.0.0"
pyyaml = "6.0.1"
scikit-learn = "1.3.0"
scipy = "1.11.2"
threadpoolctl = "3.2.0"
tqdm = "4.66.1"
treelite = "3.2.0"
treelite-runtime = "3.2.0"
typing-extensions = "4.7.1"
cudf-cu12 = {url = "https://pypi.nvidia.com/cudf-cu12/cudf_cu12-23.8.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
dask-cudf-cu12 = {url = "https://pypi.nvidia.com/dask-cudf-cu12/dask_cudf_cu12-23.8.0-py3-none-any.whl"}
cuml-cu12 = {url = "https://pypi.nvidia.com/cuml-cu12/cuml_cu12-23.8.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
rich = "^13.6.0"
spacy = "^3.7.1"
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0.tar.gz" }
openai = "^1.10.0"
google-cloud-aiplatform = "^1.35.0"
h5py = "^3.10.0"
#sklearn = "0.0.post7"
sentence-transformers = "2.2.2"
#protobuf = "4.24.1"
protobuf = "4.24.3"
colbert-ai = "^0.2.18 "

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nw = "neighborhoodwatch.neighborhoodwatch:main"
ck = "neighborhoodwatch.colbert_knn:main"